OCT REM 有不少问题的抖音view

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':app', ':componentbase', ':base', ':moudle-material'
+include ':app', ':componentbase', ':base', ':moudle-material', ':moudle-douyin'
