--- a/config.gradle
+++ b/config.gradle
@@ -2,7 +2,7 @@ ext {
     //true 每个业务Module可以单独开发
     //false 每个业务Module以lib的方式运行
     //修改之后需要Sync方可生效
-    isAlone = false
+    isAlone = true
     // applicationId
     applicationId = [
             main :"com.xyc.mvvmhabitcomponent",
